--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="static/chart.css" />
+    <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -19,28 +20,12 @@
     <script> src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js" </script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <div class=mainHeader align="center">
+      Automated Stocks Trading Bot Simulator
+    </div>
   </head>
   
   <body>  
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbar"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-        </div>
-      </div>
-    </nav>
-
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -60,17 +45,45 @@
       type="text/css"
       src="{{ url_for('static', filename='chart.css') }}"
     ></script>
-    
-    <h1 id ="note" align="center">
-      Notes
-    </h1>
-    <h2>
+
+  
+
+    <h1 align="center">
       <form method = "POST"> 
         <div class="balanceText">
           <label for="balance">
-            Enter your budget: 
-            <input type="text" placeholder = "1000" name = "balance" id = balance/>
+            Budget: 
+            <input type="text" placeholder = "1000" name = "balance" id = balance value/>
           </label>
+        </div>
+        <div class="balanceText symbolText">
+          <label for="symbol">
+            Stonk (Symbol): 
+            <input type="text" placeholder = "Symbol TSLA for Tesla" name = "symbol" id = symbol value/>
+          </label>
+        </div>
+        <div class = "container">
+          <div class="header">
+            Pick your inverval:
+          </div>
+          <div class="balanceText intervalNav" >
+              <div>
+                <input type="radio" class="radio" id="1min" name="catagory">
+                <label for="1min">1min</label><br>
+              </div>
+              <div>
+                <input type="radio" class="radio" id="5min" name="catagory">
+                <label for="5min">5min</label><br>  
+              </div>
+          </div>
+          <div class="balanceText selectedInterval">
+            Select Interval 
+          </div>
+          <div class = "Interval">
+            <label for="Interval">
+              <input type="hidden" id="Interval" name="Interval" value = "empty"/>
+            </label>
+          </div>
         </div>
         <div class="balanceText submitButton">
           <label for ="submit">
@@ -93,102 +106,139 @@
           </label> 
         </div>  
       </nav>
-    </h2>
-    <h3 align="center">
-      {{ total_balance }}
+    </h1>
+    <h2 align="center">
+      <div class=balanceHeader>
+        {{ stonk }} <br> {{ total_balance }} <br> {{ balance }}
+      </div>
       <form method = "POST">
-        <canvas id="myChart" width="1400" height="400"></canvas>
+          <canvas id="myChart" width="1400" height="400"></canvas>
         <script>
-          var ctx = document.getElementById('myChart').getContext('2d');
-          var myChart = new Chart(ctx, {
-              type: 'line',
-              data: {
-                  labels: {{ labels | safe }},
-                  datasets: [{
-                      label: 'Stonk trend',
-                      data: {{ values | safe }},
-                      fill: false,
-                      borderColor: [
-                          'rgba(255, 99, 132, 1)',
-                          'rgba(54, 162, 235, 1)',
-                          'rgba(255, 206, 86, 1)',
-                          'rgba(75, 192, 192, 1)',
-                          'rgba(153, 102, 255, 1)',
-                          'rgba(255, 159, 64, 1)'
-                      ],
-                      lineTension: 0.1
-                  }]
-              },
-              options: {
-                responsive: false
-              }
-          });
+          if ( {{labels | safe}} != null) {  
+            
+            var charty = document.getElementById('myChart');
+            charty.classList.toggle("active");
+          
+            var ctx = document.getElementById('myChart').getContext('2d');
+            var myChart = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels: {{ labels | safe }},
+                    datasets: [{
+                        label: 'Stonk trend',
+                        data: {{ values | safe }},
+                        fill: false,
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                        lineTension: 0.1
+                    }]
+                },
+                options: {
+                  responsive: false
+                }
+            });
+          }
           </script>
         </form>
-    </h3>
-    <h4 align="center">
+    </h2>
+    <h3 align="center">
+      <div class=grid></div>
       <form method = "POST">
-        <canvas align="center" id="gridChart" width="1400" height="400"></canvas>
+          <canvas align="center" id="gridChart" width="1400" height="400" ></canvas> 
         <script>
           var ctx = document.getElementById('gridChart').getContext('2d');
-          var myChart = new Chart(ctx, {
-              type: 'bar',
-              data: {
-                  labels: {{ grid_l | safe }},
-                  datasets: [{
-                      label: 'grid trend',
-                      data: {{ grid_v | safe}},
-                      backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                      borderColor: [
-                          'rgba(255, 159, 64, 1)'
-                      ],
-                      borderWidth: 1
-                  }]
-              },
-              options: {
-                responsive: false,
-                plugins: {
-                legend: {
-                  position: 'top',
+          if ( {{grid_l | safe}} != null) {  
+            
+            var griddy = document.getElementById('gridChart');
+            griddy.classList.toggle("active");
+
+            var myChart = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: {{ grid_l | safe }},
+                    datasets: [{
+                        label: 'grid trend',
+                        data: {{ grid_v | safe}},
+                        backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                        borderColor: [
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
                 },
-                title: {
-                  display: true,
-                  text: 'Chart.js Floating Bar Chart'
+                options: {
+                  responsive: false,
+                  plugins: {
+                  legend: {
+                    position: 'top',
+                  },
+                  title: {
+                    display: true,
+                    text: 'Chart.js Floating Bar Chart'
+                    }
                   }
                 }
-              }
-          });
+            });
+          }
           </script>
           <script>
             function myFunction() {
               var txtDisplay = document.getElementById("message");
-              var grid = document.getElementById("gridChart");
+              const txtDisplay_class = document.querySelector(".txtarea .message")
               if (txtDisplay.style.display == "none") {
-                txtDisplay.style.display = "block";
-                  $("#myChart").animate({width: "1050px", left: "0"}, {duration: 1500, easing: "linear"});
-                  $("#gridChart").animate({width: "1050px", left: "0"}, {duration: 1500, easing: "linear"});
-                  $("#message").animate({width: "450px", padding: "0.8em"}, {duration: 1000, easing: "linear"});
+                  txtDisplay.style.display = "block";
+                  $("#myChart").animate({width: "1050px", left: "0"}, {duration: 1000, easing: "linear"});
+                  $("#gridChart").animate({width: "1050px", left: "0"}, {duration: 1000, easing: "linear"});
+                  $("#message").animate({width: "400px", padding: "0.8em"}, {duration: 1000, easing: "linear"});
+                  txtDisplay_class.classList.toggle("active");
               }
               else {
-                  $("#message").animate({width: "40px", padding: "0.8em"}, {duration: 50, easing: "linear"});
+                  $("#message").animate({width: "40px", padding: "0.8em"}, {duration: 500, easing: "linear"});
                   $("#myChart").animate({position: "relative", width: "1400px", left: "30px", margin: "1em"}, {duration: 1500, easing: "linear"});
                   $("#gridChart").animate({position: "relative", width: "1400px", left: "30px", margin: "1em"}, {duration: 1500, easing: "linear"});
+                  txtDisplay_class.classList.remove("active");
                   setTimeout(function(){ txtDisplay.style.display = "none"; }, 2000);
               }
             }
-            /*$(document).ready(function(){
-              $("#dropButton").click(function(){
-                $("#myChart").animate({width: "1050px", left: "0"}, {duration: 1500, easing: "linear"});
+
+            var interval = document.getElementById("Interval");
+            const selected = document.querySelector(".container .selectedInterval");
+            const container = document.querySelector(".container .intervalNav");
+            const containerList = document.querySelectorAll(".container .intervalNav div");
+            selected.addEventListener("click", () => {
+              container.classList.toggle("active");
+            });
+            containerList.forEach( i => {
+              i.addEventListener("click", () => {
+                interval.value = i.querySelector("label").innerHTML;
+                selected.innerHTML = i.querySelector("label").innerHTML;;
+                container.classList.remove("active");
               });
-              $("#dropButton").click(function(){
-                $("#gridChart").animate({width: "1050px", left: "0"}, {duration: 1500, easing: "linear"});
-              });
-              $("#dropButton").click(function(){
-                $("#message").animate({width: "450px", padding: "0.8em"}, {duration: 1000, easing: "linear"});
-              });
-            });*/
+            });     
+            
+            var bal = document.getElementById("balance");
+            var stonk = document.getElementById("symbol");
+            const button_submit = document.querySelector(".submitButton");
+            
+            button_submit.addEventListener("click", () => {
+              if (bal.value == "" || bal.value == null){
+                window.alert("Please select a valid budget\nNumber only");
+              }
+              else if(stonk.value == "" || stonk.value == null || stonk.value >= 0){
+                window.alert("Please select a valid stock\nUse stock symbol (not numbers) instead of the company name\ni.e. TSLA == Tesla");
+              }
+              else if(interval.value == "empty" || interval.value == null){
+                window.alert("Please select an interval\nClick on the red select block to browse the Interval options");
+              }
+            });
           </script>
         </form>
-    </h4>
+    </h3>
   </body>
 </html>
